2007-02-15  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am
	* tools/widgets.c: added GimpStringComboBox; improved image loading;
	set some window manager hints to make the doc-shooter less intrusive.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types: added GimpStringComboBox.

	* libgimpwidgets/tmpl/gimppropwidgets.sgml: regenerated.

	* libgimpwidgets/tmpl/gimpstringcombobox.sgml: new file.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt: updated.

	* libgimpwidgets/tmpl/gimpratioentry.sgml: regenerated.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am (GTKDOC_LIBS): fixed linking of app-scan.

	* app.types: added new undo classes.

	* app-docs.sgml
	* app-sections.txt: minor updates.

2007-01-12  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt: added gimp_get_default_unit().

	* libgimp/tmpl/gimpgimprc.sgml: regenerated.

2007-01-12  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimpbase/libgimpbase-sections.txt: added new symbols.

	* libgimp/tmpl/gimpdisplay.sgml
	* libgimp/tmpl/gimpdrawable.sgml
	* libgimp/tmpl/gimpimage.sgml
	* libgimp/tmpl/gimpvectors.sgml
	* libgimpbase/tmpl/gimpbaseenums.sgml
	* libgimpwidgets/tmpl/gimpintstore.sgml
	* libgimpwidgets/tmpl/gimpenumstore.sgml: regenerated.

2007-01-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt: added new symbols.	

	* libgimpwidgets/tmpl/gimppreview.sgm: regenerated.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/images/gimp-ratio-entry.png: added screenshot.

2007-01-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* tools/widgets.c: added GimpRatioEntry.

	* libgimpwidgets/tmpl/gimpratioentry.sgml: added generated file.

	* libgimpwidgets/libgimpwidgets-docs.sgml