@@ -58,6 +58,12 @@
   <link linkend="GimpPreviewArea">
     <inlinegraphic fileref="gimp-preview-area.png" format="PNG"></inlinegraphic>
   </link>
+  <link linkend="GimpRatioEntry">
+    <inlinegraphic fileref="gimp-ratio-entry.png" format="PNG"></inlinegraphic>
+  </link>
+  <link linkend="GimpStringComboBox">
+    <inlinegraphic fileref="gimp-string-combo-box.png" format="PNG"></inlinegraphic>
+  </link>
   <link linkend="GimpUnitMenu">
     <inlinegraphic fileref="gimp-unit-menu.png" format="PNG"></inlinegraphic>
   </link>
