@@ -1,5 +1,9 @@
 2007-02-15  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/visual-index.xml: updated the widget gallery.
+
+2007-02-15  Sven Neumann  <sven@gimp.org>
+
 	* tools/Makefile.am
 	* tools/widgets.c: added GimpStringComboBox; improved image loading;
 	set some window manager hints to make the doc-shooter less intrusive.
